@@ -67,9 +67,12 @@
 		bool	isCommitQuery(sqlrservercursor *cursor);
 		bool	isRollbackQuery(sqlrservercursor *cursor);
 
+		const char	*skipQuotedStrings(const char *ptr,
+							stringbuffer *sb);
+		bool	normalizeQuery(sqlrservercursor *cursor);
+
 		void	translateBindVariablesFromMappings(
 						sqlrservercursor *cursor);
-		void	rewriteQuery(sqlrservercursor *cursor);
 		bool	translateQuery(sqlrservercursor *cursor);
 		bool	translateQueryWithParser(sqlrservercursor *cursor,
 						stringbuffer *translatedquery);
@@ -258,6 +261,10 @@
 
 		char		*debugdir;
 		stringbuffer	debugstr;
+
+		stringbuffer	normalizedquerypass1;
+		stringbuffer	normalizedquerypass2;
+		stringbuffer	normalizedquerypass3;
 
 		uint32_t	maxquerysize;
 		uint16_t	maxbindcount;
